# beril-adversarial-skill

./: .commit-message-v0_4_0.txt  .commit-message-v0_5_1.txt  .commit-message-v0_5_3.txt  .gitattributes  .gitignore  CONTRACT.md  HUB_INSTALL.md  LAYOUT.md  PLUGIN_GUIDE.md  README.md  RELEASE_NOTES.md  SPEC_TYPE_PRESENTATION.md  TUTORIAL.md  V0_4_0_PUNCH_LIST.md  pyproject.toml
src/beril_adversarial/: __init__.py  cli.py  discovery.py  llm_config.py
src/beril_adversarial/commands/: __init__.py  configure.py  install_skill.py  review.py  template_env.py
src/beril_adversarial/skill/: SKILL.md
src/beril_adversarial/skill/commands/: beril-adversarial-configure.md  beril-adversarial.md
src/beril_adversarial/skill/prompts/: adversarial_paper.v1.md  adversarial_paper.v3.md  adversarial_plan.v1.md  adversarial_presentation.v1.md  adversarial_project.v1.md  compliance_critic.v1.md  consolidation.v1.md  fusion.v1.md  json_repair.v1.md
src/beril_adversarial/skill/references/: adversarial-checklist.md
src/beril_adversarial/skill/tools/: adversarial_review.sh  aggregate_metadata.py  run_record_emitter.py  stream_progress.py  validate_presentation_review.py
tests/: test_llm_config.py
tests/fixtures/run_record_v1/: adversarial_completed.json  adversarial_failed.json  adversarial_running.json
tests/integration/: conftest.py  test_install_skill.py
tests/unit/: test_configure.py  test_discovery.py  test_presentation_review.py  test_run_record_emitter.py  test_stream_progress.py  test_validate_presentation_review.py
